# geometriandnumerical

./: CMakeLists.txt  README.md  main.cpp
funczero/: CMakeLists.txt
funczero/include/: Binary_SolveEquation.h  GD_SolveEquation.h  GSNewton_SolveEquation.h  Golden_SolveEquation.h  Newton_SolveEquation.h  Quadratic_SolveEquation.h
funczero/src/: funczero.cpp
geo_cal/: CMakeLists.txt  README.md
geo_cal/include/: Curvature.h  Distance.h  Geometry.h  Intersection.h  Projection.h  Segment_search.h  Side.h  utils.h
geo_cal/src/: main_imp.cpp
optimization/: CMakeLists.txt
optimization/include/: GD_ExtremeValue.h  Newton_ExtremeValue.h  Sim_Annealing.h
optimization/src/: optimal.cpp
